--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -17,6 +17,7 @@ branch: gh-pages
 org_name: GSA
 
 # Build settings
+remote_theme: brockfanning/sdg-indicators-jekyll
 markdown: kramdown
 
 # Pages
